--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
     <!-- See https://goo.gl/OOhYW5 -->
     <link rel="manifest" href="/manifest.json">
 
+    <script src="https://www.gstatic.com/firebasejs/4.7.0/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyArKMFC9-CHMpSmAWPINfnRsIF2ne-JaEQ",
+        authDomain: "matching-game-950a6.firebaseapp.com",
+        databaseURL: "https://matching-game-950a6.firebaseio.com",
+        projectId: "matching-game-950a6",
+        storageBucket: "",
+        messagingSenderId: "867697252846"
+      };
+      firebase.initializeApp(config);
+    </script>
+
     <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
 
     <link rel="import" href="/src/matching-game-app/matching-game-app.html">
