--- a/index.html
+++ b/index.html
@@ -24,11 +24,19 @@
       firebase.initializeApp(config);
     </script>
 
+
     <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
 
     <link rel="import" href="/src/matching-game-app/matching-game-app.html">
   </head>
   <body>
     <matching-game-app></matching-game-app>
+    <!-- For Firebase testing -->
+    <div id="bigOne"></div>
+    <script>
+      var bigOne = document.getElementById('bigOne');
+      var dbRef = firebase.database().ref().child('text');
+      dbRef.on('value', function updateValue(snap) { bigOne.innerText = snap.val() })
+    </script>
   </body>
 </html>
