--- a/src/matching-game-app/matching-game-app.html
+++ b/src/matching-game-app/matching-game-app.html
@@ -1,4 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
+<link rel="import" href="../../bower_components/polymerfire/firebase-app.html">
+<link rel="import" href="../../bower_components/polymerfire/firebase-auth.html">
+<link rel="import" href="../../bower_components/polymerfire/firebase-document.html">
 
 <dom-module id="matching-game-app">
   <template>
@@ -7,7 +10,22 @@
         display: block;
       }
     </style>
-    <h2>Hello [[prop1]]!</h2>
+
+    <firebase-app id="app"
+        app="{{firebaseApp}}"
+        auth-domain="matching-game-950a6.firebaseapp.com"
+        api-key="AIzaSyArKMFC9-CHMpSmAWPINfnRsIF2ne-JaEQ"
+        database-url="https://matching-game-950a6.firebaseio.com"
+        storage-bucket=""
+        messaging-sender-id: "867697252846"
+    ></firebase-app>
+
+    <firebase-auth id="auth"
+        user="{{user}}"
+        provider="google"
+        on-error="onError"
+    ></firebase-auth>
+
   </template>
 
   <script>
@@ -16,17 +34,28 @@
      * @polymer
      */
     class MatchingGameApp extends Polymer.Element {
-      static get is() { return 'matching-game-app'; }
+      static get is() {return 'matching-game-app';}
       static get properties() {
         return {
           prop1: {
             type: String,
             value: 'matching-game-app'
           }
+          /** The firebase app object. */
+          firebaseApp: {
+            type: Object,
+          },
+
+          /** The firebase user object. */
+          user: {
+            type: Object,
+            value: null,
+          },
+
         };
       }
     }
 
-    window.customElements.define(MatchingGameApp.is, MatchingGameApp);
+    customElements.define(MatchingGameApp.is, MatchingGameApp);
   </script>
 </dom-module>
