Add stub for static app-shell

--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
     <link rel="import" href="/src/matching-game-app/matching-game-app.html">
   </head>
   <body>
+    <matching-game-app>
+      Loading...
+      <!-- TODO: replace with static app shell -->
+    </matching-game-app>
   </body>
 </html>
