--- a/src/matching-game-app/matching-game-app.html
+++ b/src/matching-game-app/matching-game-app.html
@@ -9,7 +9,7 @@
 <link rel="import" href="../../bower_components/polymerfire/firebase-document.html">
 
 <dom-module id="matching-game-app">
-  <link rel="lazy-import" href="../matching-game-login/matching-game-login.html" group="login">
+  <link rel="lazy-import" href="../matching-game-signin/matching-game-signin.html" group="signin">
   <link rel="lazy-import" href="../matching-game-home/matching-game-home.html" group="home">
   <template>
     <style>
@@ -34,7 +34,7 @@
     ></firebase-auth>
 
     <iron-pages id="pages" attr-for-selected="name" selected="[[page]]">
-      <matching-game-login name="login" on-login-google="login"></matching-game-login>
+      <matching-game-signin name="signin" on-firebase-signin="signin"></matching-game-signin>
       <matching-game-home name="home"></matching-game-home>
     </iron-pages>
 
@@ -58,7 +58,7 @@
           /** The current view. */
           page: {
             type: String,
-            value: 'login',
+            value: 'signin',
             observer: 'pageChanged',
           },
 
@@ -104,15 +104,15 @@
       }
 
       /**
-       * Logs in with specified provider
+       * Signs in with specified provider
        * @param  {Event}  event
        */
-      async login(event) {
+      async signin(event) {
         const {provider} = event.detail;
         this.$.auth.provider = provider;
         try {
           const response = await this.$.auth.signInWithPopup();
-          this.page = response.user ? 'home' : 'login';
+          this.page = response.user ? 'home' : 'signin';
         } catch (error) {
           null; // handled by this.$.auth.onError
         }
