--- a/src/matching-game-app/matching-game-app.html
+++ b/src/matching-game-app/matching-game-app.html
@@ -24,7 +24,7 @@
         api-key="AIzaSyArKMFC9-CHMpSmAWPINfnRsIF2ne-JaEQ"
         database-url="https://matching-game-950a6.firebaseio.com"
         storage-bucket=""
-        messaging-sender-id: "867697252846"
+        messaging-sender-id="867697252846"
     ></firebase-app>
 
     <firebase-auth id="auth"
